--- a/sdks/typescript/package.json
+++ b/sdks/typescript/package.json
@@ -42,6 +42,7 @@
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
     "typedoc": "^0.25.0",
     "typescript": "^5.0.0"
   },
