--- a/integrations/vscode/package.json
+++ b/integrations/vscode/package.json
@@ -1,138 +1,125 @@
 {
-    "name": "sentinel-vscode",
-    "displayName": "Sentinel AI Alignment",
-    "description": "Mathematical alignment and goal drift prevention for AI agents.",
-    "version": "2.0.0",
-    "publisher": "sentinel-team",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/JoyciAkira/SENTINEL.git"
-    },
-    "engines": {
-        "vscode": "^1.75.0"
-    },
-    "categories": [
-        "Programming Languages",
-        "Linters",
-        "Chat"
-    ],
-    "activationEvents": [
-        "onLanguage:rust",
-        "onLanguage:typescript",
-        "onLanguage:javascript",
-        "onLanguage:python"
-    ],
-    "main": "./out/extension.js",
-    "scripts": {
-        "vscode:prepublish": "npm run compile && npm run build:webview",
-        "compile": "tsc -p ./",
-        "watch": "tsc -watch -p ./",
-        "build:webview": "vite build",
-        "watch:webview": "vite build --watch",
-        "build": "npm run compile && npm run build:webview",
-        "dev": "concurrently \"npm run watch\" \"npm run watch:webview\""
-    },
-    "contributes": {
-        "configuration": {
-            "type": "object",
-            "title": "Sentinel",
-            "properties": {
-                "sentinel.path": {
-                    "type": "string",
-                    "default": "sentinel",
-                    "description": "Path to the sentinel-cli binary."
-                }
-            }
-        },
-        "viewsContainers": {
-            "activitybar": [
-                {
-                    "id": "sentinel-explorer",
-                    "title": "Sentinel",
-                    "icon": "$(shield)"
-                }
-            ]
-        },
-        "views": {
-            "sentinel-explorer": [
-                {
-                    "id": "sentinel-chat",
-                    "type": "webview",
-                    "name": "Sentinel Chat"
-                },
-                {
-                    "id": "sentinel-alignment",
-                    "name": "Alignment"
-                },
-                {
-                    "id": "sentinel-goals",
-                    "name": "Goal Manifold"
-                },
-                {
-                    "id": "sentinel-agents",
-                    "name": "Active Agents"
-                },
-                {
-                    "id": "sentinel-security",
-                    "name": "Security"
-                },
-                {
-                    "id": "sentinel-network",
-                    "name": "Network"
-                }
-            ]
-        },
-        "commands": [
-            {
-                "command": "sentinel.openChat",
-                "title": "Open Sentinel Chat",
-                "category": "Sentinel"
-            },
-            {
-                "command": "sentinel.refreshGoals",
-                "title": "Refresh Sentinel",
-                "category": "Sentinel",
-                "icon": "$(refresh)"
-            },
-            {
-                "command": "sentinel.validateAction",
-                "title": "Validate Action",
-                "category": "Sentinel"
-            },
-            {
-                "command": "sentinel.showAlignment",
-                "title": "Show Alignment Report",
-                "category": "Sentinel"
-            }
-        ],
-        "menus": {
-            "view/title": [
-                {
-                    "command": "sentinel.refreshGoals",
-                    "when": "view =~ /^sentinel-/",
-                    "group": "navigation"
-                }
-            ]
+  "name": "sentinel-vscode",
+  "displayName": "Sentinel AI Alignment",
+  "description": "Mathematical alignment and goal drift prevention for AI agents.",
+  "version": "2.0.0",
+  "publisher": "sentinel-team",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/JoyciAkira/SENTINEL.git"
+  },
+  "engines": {
+    "vscode": "^1.75.0"
+  },
+  "categories": [
+    "Programming Languages",
+    "Linters",
+    "Chat"
+  ],
+  "activationEvents": [
+    "onLanguage:rust",
+    "onLanguage:typescript",
+    "onLanguage:javascript",
+    "onLanguage:python"
+  ],
+  "main": "./out/extension.js",
+  "scripts": {
+    "vscode:prepublish": "npm run compile && npm run build:webview",
+    "compile": "tsc -p ./",
+    "watch": "tsc -watch -p ./",
+    "build:webview": "vite build",
+    "watch:webview": "vite build --watch",
+    "build": "npm run compile && npm run build:webview",
+    "dev": "concurrently \"npm run watch\" \"npm run watch:webview\""
+  },
+  "contributes": {
+    "configuration": {
+      "type": "object",
+      "title": "Sentinel",
+      "properties": {
+        "sentinel.path": {
+          "type": "string",
+          "default": "sentinel",
+          "description": "Path to the sentinel-cli binary."
         }
+      }
     },
-    "dependencies": {
-        "lucide-react": "^0.563.0",
-        "reactflow": "^11.11.4",
-        "vscode-languageclient": "^8.1.0"
+    "viewsContainers": {
+      "activitybar": [
+        {
+          "id": "sentinel-explorer",
+          "title": "Sentinel",
+          "icon": "$(shield)"
+        }
+      ]
     },
-    "devDependencies": {
-        "@types/node": "^20.0.0",
-        "@types/react": "^18.2.0",
-        "@types/react-dom": "^18.2.0",
-        "@types/vscode": "^1.75.0",
-        "@vitejs/plugin-react": "^4.0.0",
-        "concurrently": "^8.0.0",
-        "highlight.js": "^11.9.0",
-        "marked": "^12.0.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "typescript": "^5.3.0",
-        "vite": "^5.0.0",
-        "zustand": "^4.5.0"
+    "views": {
+      "sentinel-explorer": [
+        {
+          "id": "sentinel-chat",
+          "type": "webview",
+          "name": "Sentinel Chat"
+        }
+      ]
+    },
+    "commands": [
+      {
+        "command": "sentinel.openChat",
+        "title": "Open Sentinel Chat",
+        "category": "Sentinel"
+      },
+      {
+        "command": "sentinel.codexLogin",
+        "title": "Sign in with ChatGPT (Codex)",
+        "category": "Sentinel"
+      },
+      {
+        "command": "sentinel.refreshGoals",
+        "title": "Refresh Sentinel",
+        "category": "Sentinel",
+        "icon": "$(refresh)"
+      },
+      {
+        "command": "sentinel.validateAction",
+        "title": "Validate Action",
+        "category": "Sentinel"
+      },
+      {
+        "command": "sentinel.showAlignment",
+        "title": "Show Alignment Report",
+        "category": "Sentinel"
+      }
+    ],
+    "menus": {
+      "view/title": [
+        {
+          "command": "sentinel.refreshGoals",
+          "when": "view =~ /^sentinel-/",
+          "group": "navigation"
+        }
+      ]
     }
+  },
+  "dependencies": {
+    "@sentinel/sdk": "file:../../sdks/typescript",
+    "@vscode/webview-ui-toolkit": "^1.2.2",
+    "lucide-react": "^0.563.0",
+    "reactflow": "^11.11.4",
+    "vscode-languageclient": "^8.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@types/vscode": "^1.75.0",
+    "@vitejs/plugin-react": "^4.0.0",
+    "concurrently": "^8.0.0",
+    "highlight.js": "^11.9.0",
+    "marked": "^12.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^5.3.0",
+    "vite": "^5.0.0",
+    "zustand": "^4.5.0"
+  }
 }
