--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,9 @@ reqwest = { version = "0.11", features = ["json"] }
 # Date/Time
 chrono = { version = "0.4", features = ["serde"] }
 
+# Environment variables
+dotenvy = "0.15"
+
 # Code generation (Tree-Sitter)
 tree-sitter = "0.20"
 tree-sitter-rust = "0.20"
