--- a/crates/sentinel-agent-native/Cargo.toml
+++ b/crates/sentinel-agent-native/Cargo.toml
@@ -27,7 +27,7 @@ tree-sitter = "0.20"
 tree-sitter-rust = "0.20"
 tree-sitter-typescript = "0.20"
 tree-sitter-python = "0.20"
-git2 = "0.18"
+git2 = { version = "0.18", features = ["vendored-openssl"] }
 ignore = "0.4"
 walkdir = "2.4"
 tempfile = "3.8"
@@ -38,8 +38,8 @@ libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "
 ed25519-dalek = "2.1"
 rand = "0.8"
 bincode = "1.3"
+dotenvy = "0.15"
 
 [dev-dependencies]
 tokio-test = "0.4"
 criterion = { version = "0.5", features = ["html_reports"] }
-
