--- a/integrations/vscode/package.json
+++ b/integrations/vscode/package.json
@@ -21,10 +21,10 @@
   ],
   "main": "./out/extension.js",
   "scripts": {
-    "vscode:prepublish": "npm run esbuild-base -- --production && npm run build:webview",
+    "vscode:prepublish": "node esbuild.js --production && npm run build:webview",
     "esbuild-base": "node esbuild.js",
-    "compile": "tsc -p ./",
-    "watch": "npm run esbuild-base -- --watch",
+    "compile": "node esbuild.js",
+    "watch": "node esbuild.js --watch",
     "build:webview": "vite build",
     "watch:webview": "vite build --watch",
     "build": "npm run compile && npm run build:webview",
@@ -99,10 +99,47 @@
     }
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-aspect-ratio": "^1.1.8",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-context-menu": "^2.2.16",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-menubar": "^1.1.16",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slider": "^1.3.6",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-toggle": "^1.1.10",
+    "@radix-ui/react-toggle-group": "^1.1.11",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@sentinel/sdk": "file:../../sdks/typescript",
+    "@tailwindcss/vite": "^4.1.18",
     "@vscode/webview-ui-toolkit": "^1.2.2",
+    "autoprefixer": "^10.4.24",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.33.0",
     "lucide-react": "^0.563.0",
+    "postcss": "^8.5.6",
+    "radix-ui": "^1.4.3",
+    "react-markdown": "^10.1.0",
     "reactflow": "^11.11.4",
+    "rehype-highlight": "^7.0.2",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.18",
     "vscode-languageclient": "^8.1.0"
   },
   "devDependencies": {
