--- a/crates/sentinel-agent-native/Cargo.toml
+++ b/crates/sentinel-agent-native/Cargo.toml
@@ -20,6 +20,7 @@ anyhow = "1.0"
 thiserror = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+toml = "0.8"
 uuid = { version = "1.6", features = ["v4", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
 regex = "1.10"
