feat: add innovation trace pipeline and clean chat-first webview UX

--- a/integrations/vscode/package.json
+++ b/integrations/vscode/package.json
@@ -47,7 +47,7 @@
         {
           "id": "sentinel-explorer",
           "title": "Sentinel",
-          "icon": "$(shield)"
+          "icon": "media/sentinel.svg"
         }
       ]
     },
