--- a/.github/workflows/quality-gates.yml
+++ b/.github/workflows/quality-gates.yml
@@ -22,3 +22,27 @@ jobs:
 
       - name: Run Sentinel Quality Gates
         run: ./scripts/ci_quality_gates.sh
+
+  webview-quality:
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    defaults:
+      run:
+        working-directory: integrations/vscode
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "npm"
+          cache-dependency-path: integrations/vscode/package-lock.json
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run webview quality gates
+        run: npm run quality:webview
