--- a/integrations/vscode/package.json
+++ b/integrations/vscode/package.json
@@ -28,6 +28,9 @@
     "build:webview": "vite build",
     "watch:webview": "vite build --watch",
     "build": "npm run compile && npm run build:webview",
+    "check:webview-budgets": "node scripts/check-webview-budgets.mjs",
+    "test:intent-router": "tsx scripts/test-intent-router.ts",
+    "quality:webview": "npm run build && npm run check:webview-budgets && npm run test:intent-router",
     "dev": "concurrently \"npm run watch\" \"npm run watch:webview\""
   },
   "contributes": {
@@ -154,6 +157,7 @@
     "marked": "^12.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.3.0",
     "vite": "^5.0.0",
     "zustand": "^4.5.0"
